prepare for testing